--- a/index.html
+++ b/index.html
@@ -1,8 +1,67 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Login Form</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+  }
+  .login-container {
+    background-color: #fff;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 300px;
+    max-width: 100%;
+    text-align: center;
+  }
+  .login-container h2 {
+    margin-bottom: 20px;
+    color: #333;
+  }
+  .login-container input {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    font-size: 16px;
+  }
+  .login-container button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+  }
+  .login-container button:hover {
+    background-color: #45a049;
+  }
+</style>
 </head>
 <body>
-<h1>MY first website on github </h1>
+
+<div class="login-container">
+  <h2>Login</h2>
+  <form action="/submit-login" method="post">
+    <input type="text" id="username" name="username" placeholder="Username" required>
+    <br>
+    <input type="password" id="password" name="password" placeholder="Password" required>
+    <br>
+    <button type="submit">Login</button>
+  </form>
+</div>
+
 </body>
 </html>
